# ETL-ML-Pipeline

./: .gitignore  README.md  demo_user_pipeline.yaml  finance_config.yaml  pipeline_config.yaml  predict.py  pyproject.toml  sql_pipeline.yaml  webscrape_pipeline.yaml
configs/loaders/: finance_sql.yaml  json_local.yaml  sql_database.yaml  sql_database_upsert.yaml  user_json_local.yaml
configs/sources/: alpha_vantage.yaml  github_api.yaml  jsonplaceholder.yaml  local_users.yaml  webscrape_example.yaml
configs/transforms/: data_cleaning.yaml  ohlcv_validation.yaml  pydantic_validation.yaml  technical_indicators.yaml  user_cleaning.yaml  user_validation.yaml
src/data_extractor/: __init__.py  __main__.py  engine.py  models.py  registry.py  state.py
src/data_extractor/extractors/: __init__.py  alpha_vantage.py  base.py  json_file.py  playwright_scraper.py  rest_api.py
src/data_extractor/loaders/: __init__.py  base.py  json_local.py  sqlalchemy_loader.py
src/data_extractor/schemas/: __init__.py  ohlcv.py  todo.py  user.py
src/data_extractor/transformers/: __init__.py  base.py  data_cleaning.py  finance_transformer.py  pass_through.py  (+1 more)
test_data/: broken_users.json
tests/: conftest.py  test_alpha_vantage_extractor.py  test_cli.py  test_data_cleaning_transformer.py  test_finance_transformer.py  test_json_file_extractor.py  test_json_local_loader.py  test_pass_through_transformer.py  test_pipeline_e2e.py  test_pydantic_validation_transformer.py  test_registry.py  test_schemas.py  test_sqlalchemy_loader.py  test_state_manager.py  test_upsert.py
