[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "data-extractor"
version = "0.1.0"
description = "Configuration-driven ETL pipeline (Extract → Transform → Load)"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0",
    "pydantic>=2.0",
    "httpx>=0.25",
    "pyyaml>=6.0",
    "playwright>=1.40",
    "sqlalchemy>=2.0",
]

[project.scripts]
data-extractor = "data_extractor.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
